Fixed issue with actions dropdown menu being partially visible.

--- a/src/Umbraco.Web.UI.Client/src/less/panel.less
+++ b/src/Umbraco.Web.UI.Client/src/less/panel.less
@@ -368,7 +368,6 @@
   flex-direction: column;
   height: 99px;
   padding: 0 20px;
-  overflow-y: hidden;
 }
 
 .umb-panel-header-content {
